--- a/.github/workflows/qa-branch-deploy.yml
+++ b/.github/workflows/qa-branch-deploy.yml
@@ -87,12 +87,9 @@
 name: Validate pull request
 
 on:
-  pull_request:
-    branches:
-      - main
-    types: [opened, synchronize]
-    paths:
-      - 'force-app/**'
+  push:
+    branches:    
+      - 'qa'  
 
 jobs:
   validate-deployment:
