--- a/.github/workflows/qa-branch-deploy.yml
+++ b/.github/workflows/qa-branch-deploy.yml
@@ -66,7 +66,13 @@ jobs:
 
       - name: 'Validate'
         run: |
-          sf project deploy validate -d force-app/ -l RunLocalTests -w 30          
+          sf project deploy validate -d force-app/ -l RunLocalTests -w 30      
+      # - name: 'Deploy'
+      #   run: |
+      #     sf project deploy start -d force-app/ -l RunLocalTests -w 30 
+      # - name: 'Deploy without tests'
+      #   run: |
+      #     sf project deploy start -d force-app/ -l RunLocalTests -w 30     
 
 
 
