--- a/.github/workflows/qa-branch-deploy.yml
+++ b/.github/workflows/qa-branch-deploy.yml
@@ -73,7 +73,8 @@ jobs:
       # - name: 'Deploy without tests'
       #   run: |
       #     sf project deploy start -d force-app/ -l RunLocalTests -w 30     
-
+      - name: logout of the Salesforce org 
+        run: sfdx auth:logout --all --noprompt
 
 
 #  pull-requests: 
